--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,10 @@ plugins {
     id 'org.asciidoctor.jvm.convert' version '3.3.2'
 }
 
+bootJar {
+    mainClass = 'com.edu.pm.backend.BackendServer'
+}
+
 group = 'com.edu.pm'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
