--- a/pm-backend/build.gradle
+++ b/pm-backend/build.gradle
@@ -7,9 +7,14 @@ plugins {
 
 group = 'com.edu.pm.backend'
 version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '17'
 
 repositories {
     mavenCentral()
+}
+
+bootJar {
+    mainClass = 'com.edu.pm.backend.BackendServer'
 }
 
 dependencies {
@@ -32,7 +37,6 @@ dependencies {
     implementation 'com.google.guava:guava:32.1.2-jre'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
     implementation 'org.springframework.boot:spring-boot-starter-websocket:3.0.4'
-
 }
 
 test {
