--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,7 @@
 plugins {
+    id 'org.springframework.boot' version '3.0.4' apply false
+    id 'io.spring.dependency-management' version '1.1.0' apply false
     id 'java'
-    id 'org.springframework.boot' version '3.0.4'
-    id 'io.spring.dependency-management' version '1.1.0'
-    id 'org.asciidoctor.jvm.convert' version '3.3.2'
-}
-
-bootJar {
-    mainClass = 'com.edu.pm.backend.BackendServer'
 }
 
 group = 'com.edu.pm'
@@ -14,30 +9,16 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
 allprojects {
-    apply plugin: 'java'
-    apply plugin: 'org.springframework.boot'
-    apply plugin: 'io.spring.dependency-management'
-    apply plugin: 'org.asciidoctor.jvm.convert'
-
-    dependencies {
-        compileOnly 'org.projectlombok:lombok'
-        developmentOnly 'org.springframework.boot:spring-boot-devtools'
-        annotationProcessor 'org.projectlombok:lombok'
-        testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    }
-
-    configurations {
-        compileOnly {
-            extendsFrom annotationProcessor
-        }
-    }
-
     repositories {
         mavenCentral()
     }
+}
 
-    tasks.named('test') {
+subprojects {
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
+
+    test {
         useJUnitPlatform()
     }
 }
-
