--- a/pm-backend/build.gradle
+++ b/pm-backend/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
     implementation 'org.hibernate:hibernate-validator:8.0.1.Final'
+    implementation 'org.hibernate.common:hibernate-commons-annotations:6.0.6.Final'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
