--- a/pm-backend/build.gradle
+++ b/pm-backend/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'groovy'
     id 'java'
     id 'org.springframework.boot' version '3.0.4'
     id 'io.spring.dependency-management' version '1.1.0'
@@ -19,6 +20,8 @@ bootJar {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
+    testImplementation("org.junit.jupiter:junit-jupiter-api")
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
@@ -45,8 +48,15 @@ dependencies {
     implementation 'com.google.guava:guava:32.1.2-jre'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
     implementation 'org.springframework.boot:spring-boot-starter-websocket:3.0.4'
+    implementation 'org.codehaus.groovy:groovy:3.0.9'
+    testImplementation 'org.spockframework:spock-core:2.0-groovy-3.0'
+    testImplementation 'org.mockito:mockito-core:3.6.28'
 }
 
 test {
     useJUnitPlatform()
+    testLogging {
+        testLogging.showStandardStreams = true
+        events = ["passed", "failed", "skipped"]
+    }
 }
