--- a/.github/workflows/java-gradle-ci.yml
+++ b/.github/workflows/java-gradle-ci.yml
@@ -16,10 +16,13 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '17'
-          distribution: 'temurin' # Temurin jest popularną dystrybucją JDK
+          distribution: 'temurin'
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
       - name: Build with Gradle
         run: ./gradlew build -x test
       - name: Run Tests
         run: ./gradlew test
+
+
+
